examples/test/testpolicy10602.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10602
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key18: value37
      key42: value46
      key5: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value29
          key6: value10
          key45: value49
      podSelector:
        matchLabels:
          key37: value19
          key2: value4
